--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -16,45 +16,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <!-- BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
 
 </head>
 
 <body>
+    <div class="loader">
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+    </div>
 
     <!-- Header -->
     <header>
         <a href="../index.html"><img src="../iconos/musicTripIcono.png" alt="Logo de la web de Music Trip"></a>
 
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <button class="navbar-toggler button__nav--border" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="menuHamurguesa">☰</span>
-                </button>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../index.html">Catalogo</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/artistas.html">Artistas Vinculados</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/galeria.html">Galeria</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/sobreNosotros.html">Sobre Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/contactanos.html">Contactanos</a></li>
-                    </ul>
-                </div>
-            </div>
+        <nav>
+            <ul>
+                <li><a href='../index.html'>Catalogo</a></li>
+                <li><a href="artistas.html">Artistas Vinculadoss</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+                <li><a href="contactanos.html">Contactanos</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -62,7 +54,7 @@
     <main>
         <!-- Hero Section -->
 
-        <div class="hero">
+        <div id="heroArtistas" class="hero">
             <img src="../img/tyler-the-creator.jpg" alt="Hero-Section con foto de Tyler, The Creator">
         </div>
 
@@ -142,18 +134,18 @@
             <section class="discografia">
                 <article>
                     <h3 class="subtitulos">Discografia:</h3>
-                <ul>
-                    <li>Bastard (2009)</li>
-                    <li>Goblin (2011)</li>
-                    <li>Wolf (2013)</li>
-                    <li>Cherry Bomb (2015)</li>
-                    <li>Flower Boy (2017)</li>
-                    <li>Igor (2019)</li>
-                    <li>Call Me If You Get Lost (2021)</li>
-                    <li>Call Me If You Get Lost: The Estate Sale (2023)</li>
-                </ul>
+                    <ul>
+                        <li>Bastard (2009)</li>
+                        <li>Goblin (2011)</li>
+                        <li>Wolf (2013)</li>
+                        <li>Cherry Bomb (2015)</li>
+                        <li>Flower Boy (2017)</li>
+                        <li>Igor (2019)</li>
+                        <li>Call Me If You Get Lost (2021)</li>
+                        <li>Call Me If You Get Lost: The Estate Sale (2023)</li>
+                    </ul>
                 </article>
-                
+
                 <section class="redes">
                     <h3 class="subtitulos">¡Siguelo en sus Redes Sociales!</h3>
                     <div class="redesArtista">
@@ -190,10 +182,8 @@
         </footer>
 
 
-        <!-- js -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+    <!-- js -->
+    <script src="../js/script.js"></script>
 
 </body>
 
