--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-->
-    <meta name="description" content="Aqui puedes contactar con la atencion al cliente de Music Trip si tienes dudas o problemas con algo">
+    <meta name="description"
+        content="Aqui puedes contactar con la atencion al cliente de Music Trip si tienes dudas o problemas con algo">
     <meta name="keywords" content="Asistencia, Music Trip, Atencion Al Cliente">
     <title> Music Trip | Contactanos </title>
 
@@ -15,50 +16,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <!-- BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
-    
+
 </head>
 
 <body>
+    <div class="loader">
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+    </div>
+
     <div class="distribucionContacto">
         <!-- Header -->
         <header>
-            <a href="index.html"><img src="../iconos/musicTripIcono.png" alt="Logo de la web de Music Trip"></a>
+            <a href="../index.html"><img src="../iconos/musicTripIcono.png" alt="Logo de la web de Music Trip"></a>
 
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <button class="navbar-toggler button__nav--border" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="menuHamurguesa">☰</span>
-                    </button>
-
-
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                    aria-current="page" href="../index.html">Catalogo</a></li>
-                            <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                    aria-current="page" href="../pages/artistas.html">Artistas Vinculados</a></li>
-                            <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                    aria-current="page" href="../pages/galeria.html">Galeria</a></li>
-                            <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                    aria-current="page" href="../pages/sobreNosotros.html">Sobre Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                    aria-current="page" href="../pages/contactanos.html">Contactanos</a></li>
-                        </ul>
-                    </div>
-                </div>
+            <nav>
+                <ul>
+                    <li><a href='../index.html'>Catalogo</a></li>
+                    <li><a href="artistas.html">Artistas Vinculadoss</a></li>
+                    <li><a href="galeria.html">Galeria</a></li>
+                    <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+                    <li><a href="contactanos.html">Contactanos</a></li>
+                </ul>
             </nav>
         </header>
 
         <body>
-            <main>
+            <main class="contacto">
 
                 <div class="subtituloContacto">
                     <h1>¿Tienes dudas sobre algo?</h1>
@@ -127,9 +121,7 @@
     </div>
 
     <!-- js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
