--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--SEO-->
-    <meta name="description" content="Aqui encontraras algunas fotos y videoclips destacados de los artistas que colaboran con Music Trip">
+    <meta name="description"
+        content="Aqui encontraras algunas fotos y videoclips destacados de los artistas que colaboran con Music Trip">
     <meta name="keywords" content="Fotos, Music Trip, Videoclips">
     <title> Music Trip | Galeria </title>
 
@@ -16,45 +17,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
-    <!-- BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
     <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
-    
+
 </head>
 
 <body>
+    <div class="loader">
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+        <div class="loader-line"></div>
+    </div>
 
     <!-- Header -->
     <header>
-        <a href="index.html"><img src="../iconos/musicTripIcono.png" alt="Logo de la web de Music Trip"></a>
+        <a href="../index.html"><img src="../iconos/musicTripIcono.png" alt="Logo de la web de Music Trip"></a>
 
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <button class="navbar-toggler button__nav--border" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="menuHamurguesa">☰</span>
-                </button>
-
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../index.html">Catalogo</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/artistas.html">Artistas Vinculados</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/galeria.html">Galeria</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/sobreNosotros.html">Sobre Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link active text-white ul__li--tamaño"
-                                aria-current="page" href="../pages/contactanos.html">Contactanos</a></li>
-                    </ul>
-                </div>
-            </div>
+        <nav>
+            <ul>
+                <li><a href='../index.html'>Catalogo</a></li>
+                <li><a href="artistas.html">Artistas Vinculadoss</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="sobreNosotros.html">Sobre Nosotros</a></li>
+                <li><a href="contactanos.html">Contactanos</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -71,10 +64,12 @@
             <section class="contenedorFotos">
                 <img src="../img/kendricklamarrr.jpg" alt="Imagen de Kendrick Lamar cantando">
                 <img src="../img/kendrickpng.webp" alt="Imagen de Kendrick Lamar de perfil">
-                <img src="../img/Kendrick-Lamar-GettyImages-946042002-1000x600.jpg" alt="Imagen de Kendrick Lamar en un concierto" >
+                <img src="../img/Kendrick-Lamar-GettyImages-946042002-1000x600.jpg"
+                    alt="Imagen de Kendrick Lamar en un concierto">
                 <img src="../img/kendrick-lamar.webp" alt="Imagen de Kendrick Lamar cantando en vivo">
-                <img src="../img/logoHillbillies.png" alt="Logo de los Hillbillies (Kendrick Lamar y Baby Keem juntos)" class="logoHillbillies">
-                <img src="../img/keem1.jpg" alt="Imagen de Baby Keem" >
+                <img src="../img/logoHillbillies.png" alt="Logo de los Hillbillies (Kendrick Lamar y Baby Keem juntos)"
+                    class="logoHillbillies">
+                <img src="../img/keem1.jpg" alt="Imagen de Baby Keem">
                 <img src="../img/keem2.jpg" alt="Imagen de Baby Keem de perfil">
                 <img src="../img/keem3.webp" alt="Imagen de Baby Keem cantando en vivo">
                 <img src="../img/keem4.jpg" alt="Imagen de Baby Keem cantando">
@@ -115,30 +110,27 @@
 
 
 
-<!-- Footer -->
-<footer>
+    <!-- Footer -->
+    <footer>
 
-    <p>Todos los derechos reservados</p>
+        <p>Todos los derechos reservados</p>
 
-    <!-- Iconos Redes Sociales-->
-    <div class="redesSociales">
-        <a href="https://www.facebook.com/" target="_blank"><img src="../iconos/facebook.svg"
-                alt="Logo de facebook"></a>
-        <a href="https://www.instagram.com/santii_8695/" target="_blank"><img src="../iconos/instagram.svg"
-                alt="Logo de instagram"></a>
-        <a href="https://x.com/home" target="_blank"><img src="../iconos/twitter.svg" alt="Logo de twitter"></a>
-        <a href="https://www.reddit.com/" target="_blank"><img src="../iconos/reddit.svg" alt="Logo de reddit"></a>
+        <!-- Iconos Redes Sociales-->
+        <div class="redesSociales">
+            <a href="https://www.facebook.com/" target="_blank"><img src="../iconos/facebook.svg"
+                    alt="Logo de facebook"></a>
+            <a href="https://www.instagram.com/santii_8695/" target="_blank"><img src="../iconos/instagram.svg"
+                    alt="Logo de instagram"></a>
+            <a href="https://x.com/home" target="_blank"><img src="../iconos/twitter.svg" alt="Logo de twitter"></a>
+            <a href="https://www.reddit.com/" target="_blank"><img src="../iconos/reddit.svg" alt="Logo de reddit"></a>
+        </div>
+
+    </footer>
+
     </div>
 
-</footer>
-
-</div>
-
-<!-- js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"></script>
-
+    <!-- js -->
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
